Benchmark, generating Data, steps